# flowview

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
examples/: basic_pipeline.py  method_chain_pipeline.py  realistic_pipeline.py  record_demo.py
flowview/: __init__.py  collector.py  models.py  proxy.py  renderer.py  tracer.py
tests/: test_collector.py  test_expr_summary.py  test_proxy.py  test_renderer.py  test_tracer.py
