[project]
name = "flowview"
dynamic = ["version"]
description = "Visual data pipeline debugger for Polars — stop print-debugging your pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "guillermodotn" }]
keywords = ["polars", "debugging", "data-pipeline", "visualization", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "polars>=0.20.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/guillermodotn/flowview"
Documentation = "https://github.com/guillermodotn/flowview#readme"
Repository = "https://github.com/guillermodotn/flowview"
Issues = "https://github.com/guillermodotn/flowview/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "flowview/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "flowview/",
    "tests/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]
[tool.hatch.build.targets.wheel]
packages = ["flowview"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["flowview"]
